_sass/base.scss
@import '../_sass/bourbon/bourbon';
@import 'variables';

* {
  @include box-sizing(border-box);
  font-family: $body-font;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  height: 100%;
  width: 100%;
}

h1,
h2,
h3,
h4 {
  font-family: $heading-font;
  font-weight: bold;
}

h1 {
  font-size: 64px;
  letter-spacing: -2px;
}

h2 {
  font-size: 46px;
  letter-spacing: -1px;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 14px;
}

a {
  border-bottom: 4px solid $teal;
  text-decoration: none;

  &:hover {
    text-decoration: none;
  }

  &.decorated {
    text-decoration: underline;
  }
}

p {
  font-size: 16px;
}

